--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -18,7 +18,7 @@ img {
 }
 
 html {
-		background-image: url("../restaurant.png");
+		background-image: url("../congruent_outline.png");
 		background-attachment:fixed;
     height: 100%;
 }
