--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -8,7 +8,7 @@ img {
 .Title {
     font-family: Lato, sans-serif;
     font-weight: 100;
-    color: #c0392b;
+    color: #ecf0f1;
     font-size: 90px;
 }
 
