--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -15,6 +15,42 @@ img {
     text-align: center;
 }
 
+#T {
+    font-size: 45px;
+}
+#itle {
+    font-size: 45px;
+}
+
+#player1 {
+    font-size: 30px;
+    font-family: Raleway;
+    color: #ecf0f1;
+    width: 50%;
+    display: inline-block;
+    background-color: Red;
+
+}
+
+#player2 {
+    font-size: 30px;
+    font-family: Raleway;
+    color: #ecf0f1;
+    width: 50%;
+    display: inline-block;
+    background-color: Blue;
+}
+
+.projectz {
+    width: 100%;
+    margin-top: 180px;
+    /* margin-bottom: 10px !important; */
+    display: block !important;
+    position: relative !important;
+    background-color: #2c3e50;
+    box-shadow: 0px 0px 41px rgba(0,0,0,1);
+}
+
 * {
   z-index: 5;
 }
