--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -66,6 +66,8 @@ img {
     width: 100%;
     text-align: center;
     margin-bottom: 20px;
+    font-size: 10px;
+    font-family: Raleway;
 }
 
 #player2 {
