--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -92,7 +92,7 @@ img {
 html {
 		background-image: url("../background.png");
 		background-attachment:fixed;
-    height: 100%;
+    background-size: cover;
 }
 
 header {
